3.0.9
-----
- Fix bug that reported a backup as past the nobackupwarning period even if it was still within its backup interval (Issue #180)
- Fixed typo in documentation (Issue #181)

3.0.8
-----
- Fix crashing error when subject line parsing fails (Issue #177)
- Rewrote documentation to describe advanced regex options for source, destination, and delimiter
- Updated GitHub home page

3.0.7
-----
- Fixed parsing routines to allow for spaces in the source/destination/delimiter specification (Issue #174 - Thanks ekutner)
- Updated documentaiton for source/destination/delimiter specification
- Updated documentaiton to clarify the use of "enable less secure apps" on Gmail and othr email services (Issue #175)


3.0.6
-----
- Added the ability to indicate job status (Success/Warning/Error/Failure) in the email subject line. See Report Section docs for more information. (Issue #172)
- Updates example .rc file with new options
- Fixed errors/typos in documentation

3.0.5
-----
- Fixed bug that caused "smtplib.SMTPDataError: (501, b'Syntax error - line too long')" error when using GMX email servers. (Issue #166)
- Fixed issue where program would crash if no valid SMTP server was connected (probably because of bad login credentials).(Issue #169)
- Updated description for -v option
- Fixed typos in [report] section documentation

3.0.4
-----
- Fixed bug where program would crash is using JSON emails and email contained an error message. (Issue #164)

3.0.3
-----
- Fixed bug where guided setup was converting inbox folder name to all uppercase (Issue #163)

3.0.2
-----
- Added BytesUploaded & BytesDownload fields from JSON emails to database & reports. (Issue #157)
- Added OS verison to startup log info (Issue #162)
- Updated example .rc file with new options

3.0.1
------